sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/EmptySwitchBody.sand
pub class EmptySwitchBody {
    foo() {
        (
            switch val {
                
            }
        )
    }
}